--- a/src/apps/AOC2023.WebApp/Pages/Home.razor
+++ b/src/apps/AOC2023.WebApp/Pages/Home.razor
@@ -1,7 +1,20 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>AOC2023 - Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<hgroup>
+	<h1>Advent of Code 2023</h1>
+	<h2>Web Application for running code in-browser</h2>
+</hgroup>
 
-Welcome to your new app.
+
+<p>This is still a work in progress. Check back later for more information.</p>
+
+<h3>Libraries</h3>
+
+<p>This project was made possible by utilizing several different open source projects:</p>
+
+<ul>
+	<li><a href="https://github.com/tabler/tabler-icons" target="_blank">Tabler Icons (MIT)</a></li>
+	<li><a href="https://github.com/picocss/pico" target="_blank">Pico CSS (MIT)</a></li>
+</ul>
