--- a/src/apps/AOC2023.WebApp/wwwroot/css/app.css
+++ b/src/apps/AOC2023.WebApp/wwwroot/css/app.css
@@ -1,40 +1,89 @@
-html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+/*!
+ * Pico: Customs styles for Docs
+ */
+/**
+ * Theme: Additions for docs
+ */
+    [data-theme=light],
+    :root:not([data-theme=dark]) {
+        --invalid-color: #c62828;
+        --valid-color: #388e3c;
+        --nav-background-color: rgba(255, 255, 255, 0.7);
+        --nav-border-color: rgba(115, 130, 140, 0.2);
+        --nav-logo-color: #fff;
+        --article-code-background-color: #f9fafb;
+    }
+
+@media only screen and (prefers-color-scheme: dark) {
+    :root:not([data-theme=light]) {
+        --invalid-color: rgba(183, 28, 28, 0.5);
+        --valid-color: rgba(46, 125, 50, 0.5);
+        --nav-background-color: rgba(16, 24, 30, 0.8);
+        --nav-border-color: rgba(115, 130, 140, 0.2);
+        --nav-logo-color: #0e1419;
+        --article-code-background-color: var(--code-background-color);
+    }
 }
 
-h1:focus {
-    outline: none;
+[data-theme=dark] {
+    --invalid-color: rgba(183, 28, 28, 0.5);
+    --valid-color: rgba(46, 125, 50, 0.5);
+    --nav-background-color: rgba(16, 24, 30, 0.8);
+    --nav-border-color: rgba(115, 130, 140, 0.2);
+    --nav-logo-color: #0e1419;
+    --article-code-background-color: var(--code-background-color);
 }
 
-a, .btn-link {
-    color: #0071c1;
+/**
+ * Docs: Document
+ */
+html {
+    scroll-behavior: smooth;
 }
 
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+.nav-item > .nav-link {
+    color: var(--h1-color);
+    font-weight: 600;
+    text-transform: uppercase;
+    margin: var(--spacing) 4px 0px 4px;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+.nav-item > .active {
+    background-color: color-mix(in srgb, var(--secondary-hover), transparent 80%);
+    border-radius: 4px;
 }
 
-.content {
-    padding-top: 1.1rem;
+
+/**
+ * Docs: Documentation
+ */
+#themes button.theme-switcher:first-of-type {
+    --font-weight: bold;
 }
 
-.valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
+#themes button.theme-switcher i {
+    font-style: normal;
 }
 
-.invalid {
-    outline: 1px solid red;
+/**
+ * Docs: Typography
+ */
+h1 {
+    margin-top: -0.25em;
 }
 
-.validation-message {
-    color: red;
+section > hgroup {
+    margin-bottom: calc(var(--typography-spacing-vertical) * 2);
 }
+
+[role=document] section > h1,
+[role=document] section > h2,
+[role=document] section > h3 {
+    line-height: 1;
+}
+
+
+/**** BLAZOR ****/
 
 #blazor-error-ui {
     background: lightyellow;
