--- a/src/apps/AOC2023.WebApp/Layout/MainLayout.razor.css
+++ b/src/apps/AOC2023.WebApp/Layout/MainLayout.razor.css
@@ -1,77 +1,26 @@
-.page {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-}
-
+/**
+ * Docs: Main (Grid)
+ */
 main {
-    flex: 1;
+    padding-top: calc(var(--block-spacing-vertical) + 3.5rem);
 }
 
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-}
-
-.top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
-}
-
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-        text-decoration: none;
-    }
-
-    .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
-        text-decoration: underline;
-    }
-
-    .top-row ::deep a:first-child {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-@media (max-width: 640.98px) {
-    .top-row {
-        justify-content: space-between;
-    }
-
-    .top-row ::deep a, .top-row ::deep .btn-link {
-        margin-left: 0;
+@media (min-width: 992px) {
+    main {
+        --block-spacing-horizontal: calc(var(--spacing) * 1.75);
+        grid-column-gap: calc(var(--block-spacing-horizontal) * 3);
+        display: grid;
+        grid-template-columns: 200px auto;
     }
 }
 
-@media (min-width: 641px) {
-    .page {
-        flex-direction: row;
+@media (min-width: 1200px) {
+    main {
+        --block-spacing-horizontal: calc(var(--spacing) * 2);
     }
+}
 
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-    .top-row.auth ::deep a:first-child {
-        flex: 1;
-        text-align: right;
-        width: 0;
-    }
-
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
+main > aside,
+main div[role=document] {
+    min-width: 0;
 }
