--- a/src/apps/AOC2023.WebApp/Layout/Sidenav.razor
+++ b/src/apps/AOC2023.WebApp/Layout/Sidenav.razor
@@ -36,7 +36,7 @@
 
 
 @code {
-	private bool opened = true;
+	private bool opened = false;
 
 	private string? NavMenuCssClass => opened ? "open" : "closed-on-mobile";
 
